# mysteryn-crypto

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
mysteryn-core/: Cargo.toml  README.md
mysteryn-core/benches/: attributes_bench.rs  base32pc_bench.rs  checksum_bench.rs  multibase_bench.rs  varint_bench.rs
mysteryn-core/src/: attributes.rs  key_traits.rs  lib.rs  prelude.rs  result.rs  signature.rs  utils.rs
mysteryn-core/src/encoding/: base32pc.rs  base32precheck.rs  mod.rs  multibase.rs  varint.rs
mysteryn-core/src/error_correction/: checksum.rs  mod.rs  reed_solomon.rs
mysteryn-core/src/multicodec/: known_algorithm_name.rs  mod.rs  multicodec_prefix.rs
mysteryn-crypto/: Cargo.toml  LICENSE  LICENSE.md  README.md
mysteryn-crypto/examples/: custom-keys.rs  quick-start.rs
mysteryn-crypto/examples/custom_keys/: mod.rs
mysteryn-crypto/examples/keys/: mod.rs
mysteryn-crypto/examples/nodejs/: index.js  package.json
mysteryn-crypto/src/: hash.rs  js.rs  lib.rs  prelude.rs
mysteryn-crypto/src/did/: did_document.rs  did_entity.rs  did_traits.rs  mod.rs
mysteryn-crypto/src/hash/: hash_impl.rs  identity.rs  mod.rs
mysteryn-crypto/src/multikey/: mod.rs  multikey_public.rs  multikey_secret.rs  multisig.rs  test.rs  util.rs
mysteryn-crypto/src/test/: mod.rs
