[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = ["Dmytro Savranskyi <ingvuil@gmail.com>"]
homepage = "https://mysteryn.com"
repository = "https://github.com/Mysteryn-Lab/mysteryn-crypto"
license = "Ethical Use License v1.0"

[workspace]
members = ["mysteryn-core", "mysteryn-crypto"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
unsigned-varint = "0.8"
ambassador = "0.4"
hex = "0.4"

# WASM dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
# This is needed so that rand can be included in wasm32-unknown-unknown builds.
getrandom = "0.3"

#dev-dependencies
wasm-bindgen-test = "0.3"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
